--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "eslint-config-next": "13.5.1",
     "framer-motion": "^12.0.6",
     "input-otp": "^1.2.4",
+    "linkify-react": "^4.2.0",
     "lucide-react": "^0.446.0",
     "next": "^15.1.5",
     "next-sitemap": "^4.2.3",
